--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:server": "cross-env NODE_ENV=development webpack --config build/webpack.server.config.js --progress",
-    "build:client": "cross-env NODE_ENV=development webpack --config build/webpack.client.config.js --progress",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress",
     "build": "rimraf dist && npm run build:server && npm run build:client",
     "dev": "node dev-server",
-    "start": "cross-env NODE_ENV=production node dev-server",
+    "start": "cross-env NODE_ENV=production node server",
     "postinstall": "npm run build"
   },
   "keywords": [],
