--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress",
     "build": "rimraf dist && npm run build:server && npm run build:client",
-    "dev": "node dev-server",
+    "dev": "cross-env NODE_ENV=development node dev-server",
     "start": "cross-env NODE_ENV=production node server",
     "postinstall": "npm run build",
     "format": "eslint --fix"
@@ -38,13 +38,13 @@
     "cross-env": "^5.2.0",
     "css-loader": "^3.1.0",
     "express": "^4.17.1",
-    "file-loader": "^4.0.0",
+    "file-loader": "^4.1.0",
     "lru-cache": "^5.1.1",
     "memory-fs": "^0.4.1",
     "rimraf": "^2.6.3",
     "route-cache": "^0.4.4",
     "serve-favicon": "^2.5.0",
-    "url-loader": "^2.0.1",
+    "url-loader": "^2.1.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
     "vue-router": "^3.0.7",
@@ -62,14 +62,20 @@
     "@vue/babel-preset-jsx": "^1.0.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.2",
+    "cssnano": "^4.1.10",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.2.3",
     "husky": "^3.0.0",
+    "ignore-loader": "^0.1.2",
+    "image-webpack-loader": "^5.0.0",
     "lint-staged": "^9.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss": "^7.0.17",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^1.18.2",
@@ -78,6 +84,8 @@
     "style-loader": "^0.23.1",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
-    "stylelint-prettier": "^1.1.1"
+    "stylelint-prettier": "^1.1.1",
+    "terser-webpack-plugin": "^1.3.0",
+    "vue-style-loader": "^4.1.2"
   }
 }
